# aoe2-telegram-bot

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/aoe2_bot/: _bot.py  _folders.py  bootstrap.py
src/aoe2_bot/distro/: aoe2-bot.service
src/aoe2_telegram_bot/: _bot.py  _files.py  _files_id_db.py  _folders.py  _handlers.py  bootstrap.py
tests/: README.md  conftest.py  test_cache_optimization.py  test_files_id_db.py  test_folders.py  test_handlers.py
